# us-fashion-persona

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BRANDING_POLICY.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALL-ENG.md  INSTALL.md  LICENSE-COMMERCIAL.md  NOTICE  README-ENG.md  README-KOR.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: pricing_config.yaml
data/public/: us_household_context.csv
docs/: BRANDING_POLICY.md  CONTRIBUTING.md  INSTALL-ENG.md  INSTALL-KOR.md  INSTALL.md  METHODOLOGY_AND_RIGHTS.md  THIRD_PARTY_NOTICES.md  docs.html
examples/: agent_bridge_concept.example.json
prompts/: concept_eval_ko_v0_2.md  concept_eval_ko_v0_3.md
scripts/: verify_environment.sh
src/: agent_bridge.py  aggregator.py  app.py  app_config.py  async_runner.py  cache.py  cost_estimator.py  data_loader.py  db.py  economic_context.py  job_manager.py  llm_client.py  persona_filter.py  persona_normalizer.py  pricing_config.py  prompt_builder.py  report_writer.py  result_parser.py  secrets_loader.py  worker.py
src/orchestrator/: __init__.py
src/ui/: __init__.py  assets.py  copy.py  dynamic_css.py  rendering.py  static_css.py
tests/: conftest.py  test_agent_bridge.py  test_aggregator.py  test_app.py  test_async_runner.py  test_cache.py  test_cost_estimator.py  test_data_loader.py  test_db.py  test_docs_text.py  test_job_manager.py  test_llm_client.py  test_persona_filter.py  test_persona_normalizer.py  test_price_burden.py  test_pricing_config.py  test_prompt_builder.py  test_report_writer.py  test_result_parser.py  test_secrets_loader.py  test_worker.py
tests/fixtures/: app_apptest_e2e.py  fake_evaluator.py  mock_evaluation_results.py  mock_hf_rows.py  mock_llm_responses.py  mock_local_csv.csv  mock_local_parquet.py  mock_personas.py  sample_pricing.yaml
