[project]
name = "us-fashion-persona-screener"
version = "0.1.0"
description = "Synthetic persona-based exploratory screener for US fashion concepts."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }

# DISCUSS-002 / current-update-review C1 반영 (2026-05-01).
# pydantic v2 lock (lock-in v1.2 §3.1).
dependencies = [
  "streamlit>=1.40,<2",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "python-dotenv>=1,<2",
  "httpx>=0.27,<1",  # Phase 3 LLM client async 용
  "pandas>=2,<3",
  "datasets>=3,<4",
  "pyarrow>=18",
  "gitpython>=3.1.50",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "respx>=0.21,<1",
  "ruff>=0.8,<1",
  "bandit[toml]>=1.8,<2",
  "pip-audit>=2.7,<3",
  "pre-commit>=4,<5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "data",
  "outputs",
  "cache",
  "logs",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # import sorting
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "data", "outputs", "cache", "logs"]
skips = [
  "B101", # assert 사용은 테스트/내부 검증에서 허용
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
  "no_network: tests that must not make real network calls",
  "integration: integration tests requiring real network (maintainer approval required)",
]
