[project]
name = "us-fashion-persona"
version = "0.6.2"
description = "Synthetic persona-based exploratory screener for US fashion concepts."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }

# DISCUSS-002 / current-update-review C1 諛섏쁺 (2026-05-01).
# pydantic v2 lock (lock-in v1.2 짠3.1).
dependencies = [
  "streamlit>=1.57,<2",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "python-dotenv>=1,<2",
  "httpx>=0.27,<1",
  "pandas>=2,<3",
  "datasets>=3,<4",
  "pyarrow>=18",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "respx>=0.21,<1",
  "ruff>=0.8,<1",
  "bandit[toml]>=1.8,<2",
  "pip-audit>=2.7,<3",
  "pre-commit>=4,<5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "data",
  "outputs",
  "cache",
  "logs",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # import sorting
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "data", "outputs", "cache", "logs"]
skips = [
  "B101", # assert ?ъ슜? ?뚯뒪???대? 寃利앹뿉???덉슜
  "B105", # env var names and UI labels are not hardcoded secrets
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
  "no_network: tests that must not make real network calls",
  "integration: integration tests requiring real network (maintainer approval required)",
]
